tests/requests/invalid/014.py
from gunicorn.ghttp.errors import InvalidHeader

request = InvalidHeader
